ul fix overflow, handleSubmit refactor

--- a/src/Components/Edit/Edit.scss
+++ b/src/Components/Edit/Edit.scss
@@ -6,7 +6,7 @@
   @include border-shadow;
   margin: 32px 0;
   text-transform: uppercase;
-  padding: 14px 16px 14px 16px !important;
+  padding: 14px 16px 14px 16px;
   font-size: 14px;
   line-height: 20px;
   text-align: center;
