--- a/src/Components/Person/Person.scss
+++ b/src/Components/Person/Person.scss
@@ -8,7 +8,7 @@
   margin: 32px 0;
   border-radius: 4px;
   text-transform: uppercase;
-  padding: 14px 16px 14px 16px !important;
+  padding: 14px 16px 14px 16px;
   font-size: 14px;
   line-height: 20px;
   text-align: center;
