--- a/src/Components/PersonsList/PersonsList.scss
+++ b/src/Components/PersonsList/PersonsList.scss
@@ -9,7 +9,7 @@
   overflow: scroll;
   border: 1px solid #f7f7f7;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   @media (min-width: 800px) {
     max-height: 400px;
   }
@@ -66,7 +66,7 @@
   margin: 0 8px;
   border-radius: 4px;
   text-transform: uppercase;
-  padding: 14px 16px 14px 16px !important;
+  padding: 14px 16px 14px 16px;
   font-size: 14px;
   line-height: 20px;
   text-align: center;
